--- a/layouts/header.ejs
+++ b/layouts/header.ejs
@@ -12,6 +12,7 @@
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../font-awesome/css/font-awesome.css" rel="stylesheet">
     <link href="../css/back.css" rel="stylesheet">
+    <script src="../js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript">
         
         var CURR_PAGE = <%= (locals.curr_page) ? curr_page :1 %>;
