--- a/lib/users/users.ejs
+++ b/lib/users/users.ejs
@@ -21,7 +21,7 @@
                     <a id="go-search" class="btn btn-default btn-warning"><i class="fa fa-search"></i> </a>
                       
                    <div class="form-group pull-right">
-                       <a href="/users/add-user" class="btn btn-success"><i class="fa fa-plus"></i> Add User</a>
+                       <a href="javascript:void(0)" class="btn btn-success" data-toggle="modal" data-target="#modal-user"><i class="fa fa-plus"></i> Add User</a>
                        <a href="/users/import" class="btn btn-primary"><i class="fa fa-compress"></i> Import</a>
                        <a href="/users/export" class="btn btn-info"><i class="fa fa-expand"></i> Export</a>
                    </div>
@@ -39,9 +39,9 @@
                         <table class="table table-bordered table-hover">
                         <thead>
                             <tr>
-                                <td>ID</td>
-                                <td>Username</td>
-                                <td>Status</td>
+                                <th>ID</th>
+                                <th>Username</th>
+                                <th>Status</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -68,5 +68,11 @@
                 <%- pagination %>
             </div>
         </div>
-    </div>
+      
+        <!--Modal-->
+        <%- include modal_user.ejs %>
+        
+        
+        
+    </div> <!--end of page conatiner-->
 <%- include ../../layouts/footer.ejs %>
