--- a/lib/users/modal_user.ejs
+++ b/lib/users/modal_user.ejs
@@ -9,7 +9,7 @@
             
             <form role="form" id="user-form" method="post" action="/users/save-user">
               <div class="form-group">
-                <label for="username">Email address</label>
+                <label for="username">Username</label>
                 <input type="hidden" name="user_id" id="user_id" value=""/>
                 <input type="text" class="form-control" name="username" id="username" placeholder="Username..." required>
               </div>
